Ensure text remains visible during webfont load

--- a/style/src/theme/font.less
+++ b/style/src/theme/font.less
@@ -3,6 +3,7 @@
   src: local('Sailec Thin'), url('../font/sailec-thin.woff') format('woff');
   font-weight: 100;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
   src: local('Sailec Light'), url('../font/sailec-light.woff') format('woff');
   font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -17,6 +19,7 @@
   src: local('Sailec Bold'), url('../font/sailec-bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 
 @font: {
